feat: Allow to get to launch window in different kinds of languages

--- a/src/main/resources/UI/JavaFX/properties/UI-javafx_en_US.properties
+++ b/src/main/resources/UI/JavaFX/properties/UI-javafx_en_US.properties
@@ -3,6 +3,7 @@ main.versionLabel=Version:
 main.playerNameLabel=PlayerName: 
 main.launch=Launch
 main.pathLabel=Path: 
-main.rootDirLabel=RootPath: 
+main.rootDirLabel=Root Path: 
+main.choose=Choose
 dialog.choosePath=Choose path
 dialog.chooseRootDir=Choose root path
